# codestripper

./: .gitignore  Phonebook.java  README.md  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: release.yml  test.yml
codestripper/: __main__.py  code_stripper.py  errors.py  tokenizer.py
codestripper/tags/: add.py  ignore_file.py  legacy.py  remove.py  replace.py  tag.py  uncomment.py  utils.py
codestripper/utils/: __init__.py  comments.py  file.py  logger.py
tests/: test_add.py  test_codestripper.py  test_ignore_file.py  test_main.py  test_remove.py  test_tags.py
tests/files/: InvalidTag.java  MissingClose.java  WrongClose.java
tests/tags/: test_add.py  test_ignore_file.py  test_legacy.py  test_remove.py  test_replace.py  test_tags.py  test_uncomment.py
tests/testproject/: pom.xml  test.test
tests/utils/: test_file.py  test_logger.py  test_utils.py
