[tool.poetry]
name = "codestripper-test"
version = "0.1.0"
description = ""
authors = ["Bonajo <m.bonajo@fontys.nl>"]
readme = "README.md"
packages = [{include = "codestripper_test"}]

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.group.test.dependencies]
pytest = "^7.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
